trying to fix header spacing issue for phone

--- a/x/style.css
+++ b/x/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 span.welcome {
-    margin-top: 1em;
+    margin-top: 16px;
     margin-bottom: 0.4em;
     display: block;
     text-align: right;
